--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <form action="api.php" method="post">
-        <input  name="num[]"></input>
-        <input type="submit" value="=">
-    </form>
+    <div class="cal">
+        <h1>Calculadora</h1>
+        <form action="api.php" method="post">
+            <input name="num[]"></input>
+            <input type="submit" value="=">
+        </form>
+    </div>
 </body>
+
 </html>
